<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">
    <include layout="@layout/common_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/head"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/input_user"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/register_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/input_pass"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/register_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/input_repass"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp" />
        <Button
            android:id="@+id/register_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg_black"
            android:textSize="30dp"
            android:text="确认"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>