<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/main_tab_icon_home"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/color_main_tab_txt"
            android:text="@string/home"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_order"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_order"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/main_tab_icon_order"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/color_main_tab_txt"
            android:text="@string/order"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_me"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_me"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/main_tab_icon_me"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/color_main_tab_txt"
            android:text="@string/me"/>
    </LinearLayout>
</LinearLayout>