<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">
    <include layout="@layout/common_toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="60dp"
        android:textColor="#B3FF9800"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_user"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:paddingStart="10dp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/login_on"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="登录"
                style="@style/button_large_black"/>
            <TextView
                android:id="@+id/login_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginRight="@dimen/dp_20"
                android:padding="@dimen/dp_5"
                android:text="游客登录"
                android:textColor="#00BCD4"
                android:textSize="12dp"/>

        </FrameLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/login_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/check_choose"
                android:minWidth="48dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_key"
                android:textSize="15dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="新用户注册，点击这里"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/to_refound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="忘记密码，点击这里"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</LinearLayout>